--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
 
             function ball_Color(){
-                if (ballColor==="black"){
+                if (ballColor=="black"){
                     ballColor="red";
-                }else if(ballColor==="red"){
+                }else if(ballColor=="red"){
                     ballColor="black";
                 }
                 audio1.play();
